Fix bug with text overflowing on devices with vertically short screens.

--- a/src/sass/bio.scss
+++ b/src/sass/bio.scss
@@ -13,9 +13,6 @@
             right: 0;
         }
     }
-    .valign {
-        transform: translateY(-15%);
-    }
     @media #{$small-and-down} {
         .img-wrapper {
             width: 100%;
@@ -36,7 +33,6 @@
             padding-bottom: 55px;
         }
         .valign {
-            transform: none;
             &:after {
                 content: " ";
                 height: 75px;
@@ -58,7 +54,27 @@
             }
         }
         .valign-wrapper {
-            height: 100%;
+            margin-top: 46px;
+            margin-bottom: 70px;
+            height: calc(100% - 116px);
+            overflow: auto;
+            position: relative;
+            .valign {
+                max-height: 100%;
+                &:after {
+                    content: " ";
+                    height: 75px;
+                    background: linear-gradient(to bottom, rgba(37, 37, 37, 0), $offBlack);
+                    display: block;
+                    position: fixed;
+                    width: 100%;
+                    bottom: 70px;
+                }
+                .body-text {
+                    padding-bottom: 75px;
+                }
+
+            }
         }
     }
 }
